--- a/src/main/resources/templates/addEmployee.html
+++ b/src/main/resources/templates/addEmployee.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Add employee</title>
 </head>
 <body>
-$END$
+<div class="add_employee">
+  <h1>Add</h1>
+    <form action="/employee/add" method="post" enctype="multipart/form-data">
+        <input type="text" name="name" placeholder="input employee name">
+        <input type="text" name="surname" placeholder="input employee surname">
+        <input type="email" name="email" placeholder="input employee email">
+        <input type="text" name="phoneNumber" placeholder="input employee phone number">
+        <input type="number" name="salary" step="0.01" min="0" max="500000" placeholder="choose salary">
+        <select name="position">
+            <option value="" selected disabled hidden>Choose position</option>
+            <option th:each="position: ${positions}" th:text="${position.name()}" th:value="${position.name()}"></option>
+        </select>
+        <input type="file" name="employeeImage">
+        <select name="company.id">
+            <option value="" selected disabled hidden>Choose Company</option>
+            <option th:each="companies: ${company}" th:text="${companies.name}" th:value="${companies.id}"></option>
+        </select>
+        <input type="submit" value="ADD EMPLOYEE">
+    </form>
+</div>
+
 </body>
 </html>
