--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Home page</title>
 </head>
 <body>
-$END$
+<div class="container">
+    <a href="/companies">Companies</a>
+    <a href="/employees">Employees</a>
+</div>
+
+
 </body>
 </html>
