--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
 <div class="container">
     <a href="/companies">Companies</a>
     <a href="/employees">Employees</a>
+    <a href="/users">Users</a>
+    <a href="/user/add">Add User</a>
+    <a href="/company/add">Add Company</a>
 </div>
 
 
